update android download link

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -33,7 +33,7 @@
             {% if site.app.android_id %}
             <a
               class="download-btn btn btn-lg"
-              href="http://app.xiaomi.com/details?id={{ site.app.android_id }}">
+              href="http://www.wandoujia.com/apps/{{ site.app.android_id }}">
               <i class="fa fa-android fa-lg" aria-hidden="true"></i> Android下载
             </a>
             {% endif %}
